--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -2,6 +2,8 @@
 $grayish: #e5e5e5;
 $body-white: #f9f9f9;
 $whiter-than-body-white: #ffffff;
+$yad2-orange: #FF7100;
+$grayish-on-yad2-orange: #E56500;
 
 // Spacing
 $s-size: 1.2rem;
