--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -4,6 +4,7 @@ $body-white: #f9f9f9;
 $whiter-than-body-white: #ffffff;
 $yad2-orange: #FF7100;
 $grayish-on-yad2-orange: #E56500;
+$def-color: #363636;
 
 // Spacing
 $s-size: 1.2rem;
