--- a/client/src/styles/components/Item.scss
+++ b/client/src/styles/components/Item.scss
@@ -1,5 +1,26 @@
 @import "../base/settings";
 
-.testing {
-  background-color: red;
-}
+// .testing {
+//   background-color: red;
+//   width: 50%;
+//   margin: 0 auto;
+// }
+
+// .unfold {
+//   max-height: 100px;
+//   transition: max-height 0.8s ease-out;
+//   background-color: $grayish-on-yad2-orange;
+// }
+
+// .folded {
+//   display: block;
+//   height: auto;
+//   max-height: 0;
+//   transition: max-height 0.5s ease;
+//   white-space: pre-line;
+//   overflow: hidden;
+// }
+
+
+
+
