all related miniitem comps into subfolder. flex-grow for right column.

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -11,7 +11,6 @@ $pretty-gray: rgba(0,0,0,.5);
 $lightest-gray: rgba(0,0,0,.1);
 
 
-
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
@@ -31,6 +30,9 @@ $cont-height-xl-size-padding: $xl-size * 2 + (9/8) * $body-font;
 //Main component widths
 $item-list-container-width: 695px;
 
+
+//Component height
+// $mini-item-height:
 
 //Main margins 
 $general-horizontal-margin: 20vw;
