better font (credit yarden)

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  font-family: 'rubikregular', Helvetica, sans-serif;
+  font-family: 'rubik-heb', Helvetica, sans-serif;
   font-size: $body-font;
   font-weight: 500;
   background-color: $body-white;
