added image overlay - it works

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -20,3 +20,17 @@ button {
 button:disabled {
   cursor: default;
 }
+
+
+
+@media only screen and (max-width: 630px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  html {
+    font-size: 75%;
+  }
+}
