--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -2,6 +2,8 @@
 
 .Header__container {
   display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
   justify-content: space-between;
   background-color: $whiter-than-body-white;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
