--- a/client/src/styles/components/Item.scss
+++ b/client/src/styles/components/Item.scss
@@ -1,5 +1,21 @@
 @import "../base/settings";
 
+.Item__container {
+  margin: 1px;
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 14px 1px rgba(0, 0, 0, 0.15);
+    & .overlay {
+      visibility: visible;
+    }
+    & .MiniItem__thumbnail-container {
+      transform: scale(1.05);
+      filter: grayscale(20%);
+      background-color: $grayish;
+    }
+  }
+}
+
 // .testing {
 //   background-color: red;
 //   width: 50%;
@@ -20,7 +36,3 @@
 //   white-space: pre-line;
 //   overflow: hidden;
 // }
-
-
-
-
