--- a/client/src/styles/components/MiniItem.scss
+++ b/client/src/styles/components/MiniItem.scss
@@ -9,8 +9,9 @@
   width: 100%;
 }
 
-
 @mixin column {
+  width: auto;
+  height: auto;
   display: flex;
   border-width: 0 0.5px;
   border-color: $lightest-gray;
@@ -22,6 +23,7 @@
   }
 }
 
+
 @mixin text-child($text-align: center, $subtitle-color: $pretty-gray) {
   & .text-child {
     text-align: $text-align;
@@ -32,8 +34,14 @@
   }
 }
 
+.ImageColumn {
+  @include column;
+  border: 0;
+}
+
 .RightColumn {
   @include column;
+  border-right: 0;
   @include text-child(right, $def-color);
   flex-grow: 1;
   overflow: hidden;
@@ -52,11 +60,7 @@
   }
 }
 
-.overflow-container {
-  overflow: hidden;
-  & .overflow {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-}
+
+
+
+
