--- a/client/src/styles/components/Thumbnail.scss
+++ b/client/src/styles/components/Thumbnail.scss
@@ -27,3 +27,11 @@ $thumbnailHeight: ($thumbnailWidth * 5/8);
     background-color: $def-color;
   }
 }
+
+
+
+.loader {
+  color:blue;
+  display: block;
+  margin: 0 auto;
+}
