spacing expanded item

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -10,6 +10,8 @@ $grayish: rgb(229, 229, 229);
 $pretty-gray: rgba(0, 0, 0, 0.5);
 $lightest-gray: rgba(0, 0, 0, 0.1);
 
+$button-green: rgb(15, 202, 128);
+
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
