--- a/client/src/styles/components/SpreadItem.scss
+++ b/client/src/styles/components/SpreadItem.scss
@@ -1,53 +1,41 @@
 @import "../base/settings";
-@import "./MiniItem.scss";
+@import "./TopTab.scss";
+@import "../base//utility-classes";
 
 .SpreadItem {
-  @extend .MiniItem__container;
-  .column {
+  @extend .TopTab;
+  > div {
+    padding: 0;
+  }
+  .contain {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     > div {
-      padding: 7px;
+      flex: 0 49%;
     }
   }
-  div {
+  * {
     border: 0;
   }
-  .PriceColumn {
-    justify-content: flex-end;
+}
+
+.show-phone-number-button {
+  justify-content: flex-end;
+  font-size: $s-size;
+  color: white;
+  padding: $s-size * 0.75;
+  border: 0;
+  border-radius: 3px;
+  background-color: $button-green;
+  display: flex;
+  align-items: center;
+  height: fit-content;
+  img {
+    padding-left: 7px;
+    filter: invert(100%);
   }
-  .AddressColumn {
-    > div {
-    }
-  }
-  .StatsAddressAndPriceColumns {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    justify-content: space-between;
-    > div {
-      display: flex;
-      justify-content: space-between;
-    }
-    > .lower {
-      flex-wrap: wrap;
-      > .show-phone-number {
-        font-size: $s-size;
-        color: white;
-        margin: 10px;
-        border: 0;
-        border-radius: 3px;
-        padding: 0 25px;
-        background-color: $button-green;
-        display: flex;
-        align-items: center;
-        img {
-          height: fit-content;
-          padding-left: 7px;
-          filter: invert(100%);
-        }
-        &:hover {
-          background-color: darken($button-green, 7%);
-        }
-      }
-    }
+  &:hover {
+    background-color: darken($button-green, 7%);
   }
 }
