refactoring of css classnames for clarity. starting to build level2.

--- a/client/src/styles/components/Item/Footer.scss
+++ b/client/src/styles/components/Item/Footer.scss
@@ -5,6 +5,6 @@
     font-size: $s-size*0.9;
     padding: $s-size;
     align-items: center;
-    // flex-direction: reverse;
     justify-content: flex-end;
+    border-top: 1px solid $lightest-gray;
 }
