--- a/client/src/styles/components/Item/RestOfData.scss
+++ b/client/src/styles/components/Item/RestOfData.scss
@@ -1,16 +1,25 @@
-@import '../../base/settings';
+@import "../../base/settings";
 
 .Item-level2-3 {
   display: flex;
   flex-direction: row-reverse;
-}
-
-.Item-level2-3-data {
-  overflow: hidden;
-  flex: 0 0 70%;
-}
-
-.Item-level2-3-ads {
-  background-color: $grayish;
-  flex: 0 0 30%;
+  font-size: $s-size;
+  .Item-level2-3-ads {
+    background-color: $grayish;
+    flex: 0 0 30%;
+  }
+  .Item-level2-3-data {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 70%;
+    > div {
+      padding: $s-size/2;
+      line-height: 1.3;
+    }
+    .Level2__attributes {
+      display: flex;
+      
+    }
+  }
 }
