--- a/client/src/styles/components/Item/SpreadTopBar.scss
+++ b/client/src/styles/components/Item/SpreadTopBar.scss
@@ -1,13 +1,13 @@
 @import "../../base/settings";
-@import "./TopBar.scss";
+@import "./top-bar-generalities.scss";
 @import "../../base/utility-classes";
 
 .SpreadItem {
-  @extend .TopTab;
+  @extend .top-bar-factory;
   > div {
     padding: 0;
   }
-  .contain {
+  .container-of-all-columns-bar-image-column {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -20,45 +20,4 @@
   }
 }
 
-.cont {
-  position: relative;
-  font-size: $s-size*1.1;
-}
 
-
-.PhoneNumberExpansion {
-  z-index: 100;
-  position: absolute;
-  overflow: hidden;
-  height: fit-content;
-  transition: max-height 0.3s ease-out;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px 0px;
-  width: 100%;
-  .child {
-    
-    text-align: center;
-    border-bottom: 1px solid #d6d6d6;
-    background-color: $whiter-than-body-white;
-    padding: $s-size*0.8;
-  }
-}
-
-.show-phone-number-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 2px;
-  padding: $s-size * 0.75;
-  color: white;
-  border: 0;
-  background-color: $button-green;
-  img {
-    padding-left: 7px;
-    filter: invert(100%);
-    height: 1.35rem;
-    width: 1.35rem;
-  }
-  &:hover {
-    background-color: darken($button-green, 7%);
-  }
-}
