getting level3 to work

--- a/client/src/styles/components/Item/SpreadTopBar.scss
+++ b/client/src/styles/components/Item/SpreadTopBar.scss
@@ -17,5 +17,15 @@
     * {
       border: none;
     }
+    .PhoneNumberColumn {
+      @extend .column;
+      border: 0;
+      align-items: flex-end;
+      justify-content: flex-end;
+      .phone-number-button-and-expansion-positioner-and-column-child {
+        position: relative;
+        font-size: $s-size * 1.1;
+      }
+    }
   }
 }
