--- a/client/src/styles/components/Item/RestOfData.scss
+++ b/client/src/styles/components/Item/RestOfData.scss
@@ -14,12 +14,13 @@
     flex-direction: column;
     flex: 0 0 70%;
     > div {
+      margin: 0 15px;
       padding: $s-size/2;
       line-height: 1.3;
-    }
-    .Level2__attributes {
-      display: flex;
-      
+      border-bottom: 0.5px solid $grayish;
+      &:last-of-type {
+        border: none;
+      }
     }
   }
 }
