--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -8,6 +8,7 @@ $item-level-1-color: #f4efbe;
 
 $grayish: rgb(229, 229, 229);
 $pretty-gray: rgba(0, 0, 0, 0.5);
+$faded-attr-gray:rgb(182, 182, 182);
 $lightest-gray: rgba(0, 0, 0, 0.1);
 
 $button-green: rgb(15, 202, 128);
