a little styling of price column. dependant on wrapping text of subtitle of ColumnInnerChild in span. changes were made in Item.scss to accomadate said styling. Also, wired up mitigating company name in Price column.

--- a/client/src/styles/components/Item/Item.scss
+++ b/client/src/styles/components/Item/Item.scss
@@ -15,5 +15,18 @@
         visibility: visible;
       }
     }
+    .SpreadItem .PriceColumn .text-child > div + div {
+      opacity: 0;
+      transition: opacity 150ms;
+    }
+    .MiniItem .PriceColumn .text-child > div + div {
+      & span {
+        display: none;
+      }
+      &:before {
+        content: "לחצו לפרטים";
+        color: $yad2-orange;
+      }
+    }
   }
 }
