--- a/client/src/styles/components/Item/Level2.scss
+++ b/client/src/styles/components/Item/Level2.scss
@@ -5,7 +5,7 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        > div {
+        > .Level2Attribute {
         display: inline;
           flex: 0 49%;
           padding: $s-size/3 0;
