--- a/client/src/styles/components/Item/Item.scss
+++ b/client/src/styles/components/Item/Item.scss
@@ -5,6 +5,7 @@
   border-radius: 3px;
   border: 1px solid $lightest-gray;
   &:hover {
+    cursor: pointer;
     box-shadow: 0px 0px 14px 1px rgba(0, 0, 0, 0.15);
     .thumbnail-container {
       .thumbnail {
