--- a/client/src/styles/components/Item/PhoneNumberExpansion.scss
+++ b/client/src/styles/components/Item/PhoneNumberExpansion.scss
@@ -1,17 +1,21 @@
 @import "../../base/settings";
 
 .PhoneNumberExpansion {
-    z-index: 100;
-    position: absolute;
-    overflow: hidden;
-    height: fit-content;
-    transition: max-height 0.3s ease-out;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px 0px;
-    width: 100%;
-    .child {
-      text-align: center;
-      border-bottom: 1px solid #d6d6d6;
-      background-color: $whiter-than-body-white;
-      padding: $s-size * 0.8;
-    }
+  z-index: 100;
+  position: absolute;
+  overflow: hidden;
+  height: fit-content;
+  transition: max-height 0.3s ease-out;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px 0px;
+  width: 100%;
+  .child {
+    text-align: center;
+    border-bottom: 1px solid #d6d6d6;
+    white-space: normal;
+    background-color: $whiter-than-body-white;
+    padding: $s-size * 0.8;
   }
+  a:hover {
+    color: blue;
+  }
+}
