--- a/client/src/styles/components/Item/PhoneNumberExpansion.scss
+++ b/client/src/styles/components/Item/PhoneNumberExpansion.scss
@@ -14,6 +14,12 @@
     white-space: normal;
     background-color: $whiter-than-body-white;
     padding: $s-size * 0.8;
+    &:last-child {
+      text-decoration: underline;
+      &:hover {
+        background-color: $grayish;
+      }
+    }
   }
   a:hover {
     color: blue;
