copy to clip works now. final refactoring of phone number expnasion. now finally readable. state also doesn't have visual elements. just data.

--- a/client/src/styles/components/Item/PhoneNumberExpansion.scss
+++ b/client/src/styles/components/Item/PhoneNumberExpansion.scss
@@ -9,6 +9,9 @@
   box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 4px 0px;
   width: 100%;
   .child {
+    &.css-0 {
+      background-color: $whiter-than-body-white;
+    }
     text-align: center;
     border-bottom: 1px solid #d6d6d6;
     white-space: normal;
