--- a/client/src/styles/components/Item/Item.scss
+++ b/client/src/styles/components/Item/Item.scss
@@ -7,14 +7,6 @@
   &:hover {
     cursor: pointer;
     box-shadow: 0px 0px 14px 1px rgba(0, 0, 0, 0.15);
-    .thumbnail-container {
-      .thumbnail {
-        transform: scale(1.1);
-      }
-      .overlay {
-        visibility: visible;
-      }
-    }
     .SpreadItem .PriceColumn .text-child > div + div {
       opacity: 0;
       transition: opacity 150ms;
@@ -26,6 +18,14 @@
       &:before {
         content: "לחצו לפרטים";
         color: $yad2-orange;
+      }
+    }
+    .ColumnChild {
+      .image {
+        transform: scale(1.1);
+      }
+      .overlay {
+        visibility: visible;
       }
     }
   }
