--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -8,7 +8,8 @@ $item-level-1-color: #f4efbe;
 
 $grayish: rgb(229, 229, 229);
 $pretty-gray: rgba(0, 0, 0, 0.5);
-$faded-attr-gray:rgb(182, 182, 182);
+$dark-gray: rgba(37, 37, 36, 0.9);
+$faded-attr-gray: rgb(182, 182, 182);
 $lightest-gray: rgba(0, 0, 0, 0.1);
 
 $button-green: rgb(15, 202, 128);
@@ -19,7 +20,6 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 
-
 // Font size
 $body-font: $m-size;
 
@@ -28,7 +28,3 @@ $cont-height-s-size-padding: $s-size * 2 + (9/8) * $body-font;
 $cont-height-m-size-padding: $m-size * 2 + (9/8) * $body-font;
 $cont-height-l-size-padding: $l-size * 2 + (9/8) * $body-font;
 $cont-height-xl-size-padding: $xl-size * 2 + (9/8) * $body-font;
-
-
-
-
