--- a/client/src/styles/components/Item/Thumbnail.scss
+++ b/client/src/styles/components/Item/Thumbnail.scss
@@ -1,7 +1,7 @@
 @import "../../base/settings";
 
 .ColumnChild {
-  .image-container {
+  .thumbnail-container {
     padding: 0;
     overflow: hidden;
     border-radius: 3px;
