--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,8 @@
 @import './base/settings';
 @import './base/base';
 @import './base/utility-classes';
+
+.App + .css-0 {
+    transform: rotate(90deg);
+    display: inline-block;
+}
