--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -29,7 +29,9 @@ $cont-height-m-size-padding: $m-size * 2 + (9/8) * $body-font;
 $cont-height-l-size-padding: $l-size * 2 + (9/8) * $body-font;
 $cont-height-xl-size-padding: $xl-size * 2 + (9/8) * $body-font;
 
-
 :export {
-    yad2Orange: $yad2-orange;
+  yad2Orange: $yad2-orange;
+  sSize: $s-size;
+  mSize: $m-size;
+  lSize: $l-size;
 }
