--- a/client/src/styles/components/ItemList.scss
+++ b/client/src/styles/components/ItemList.scss
@@ -1,7 +1,6 @@
 @import "../base/settings";
 
-.ItemList__container {
-  width: 85vw;
-  max-width: 800px;
-  margin: 0 auto;
+
+.ItemList {
+    position: relative;
 }
